Archive2/92/1ca3811dbe67ff/output
main.cpp:21:17: error: no viable overloaded '^='
          bv[n] ^= true;
          ~~~~~ ^  ~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/ios_base.h:99:3: note: candidate function not viable: no known conversion from 'reference' (aka 'std::_Bit_reference') to 'std::_Ios_Fmtflags &' for 1st argument
  operator^=(_Ios_Fmtflags& __a, _Ios_Fmtflags __b)
  ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/ios_base.h:139:3: note: candidate function not viable: no known conversion from 'reference' (aka 'std::_Bit_reference') to 'std::_Ios_Openmode &' for 1st argument
  operator^=(_Ios_Openmode& __a, _Ios_Openmode __b)
  ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/ios_base.h:177:3: note: candidate function not viable: no known conversion from 'reference' (aka 'std::_Bit_reference') to 'std::_Ios_Iostate &' for 1st argument
  operator^=(_Ios_Iostate& __a, _Ios_Iostate __b)
  ^
main.cpp:25:17: error: no viable overloaded '^='
          bv[n] ^= true;
          ~~~~~ ^  ~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/ios_base.h:99:3: note: candidate function not viable: no known conversion from 'reference' (aka 'std::_Bit_reference') to 'std::_Ios_Fmtflags &' for 1st argument
  operator^=(_Ios_Fmtflags& __a, _Ios_Fmtflags __b)
  ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/ios_base.h:139:3: note: candidate function not viable: no known conversion from 'reference' (aka 'std::_Bit_reference') to 'std::_Ios_Openmode &' for 1st argument
  operator^=(_Ios_Openmode& __a, _Ios_Openmode __b)
  ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/ios_base.h:177:3: note: candidate function not viable: no known conversion from 'reference' (aka 'std::_Bit_reference') to 'std::_Ios_Iostate &' for 1st argument
  operator^=(_Ios_Iostate& __a, _Ios_Iostate __b)
  ^
main.cpp:29:17: error: no viable overloaded '^='
          bv[n] ^= true;
          ~~~~~ ^  ~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/ios_base.h:99:3: note: candidate function not viable: no known conversion from 'reference' (aka 'std::_Bit_reference') to 'std::_Ios_Fmtflags &' for 1st argument
  operator^=(_Ios_Fmtflags& __a, _Ios_Fmtflags __b)
  ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/ios_base.h:139:3: note: candidate function not viable: no known conversion from 'reference' (aka 'std::_Bit_reference') to 'std::_Ios_Openmode &' for 1st argument
  operator^=(_Ios_Openmode& __a, _Ios_Openmode __b)
  ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/ios_base.h:177:3: note: candidate function not viable: no known conversion from 'reference' (aka 'std::_Bit_reference') to 'std::_Ios_Iostate &' for 1st argument
  operator^=(_Ios_Iostate& __a, _Ios_Iostate __b)
  ^
3 errors generated.
